--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # spring.session.store-type=redis
-spring.redis.host=localhost
-spring.redis.port=6379
-# spring.redis.host=redis-16364.c284.us-east1-2.gce.cloud.redislabs.com
-# spring.redis.port=16364
-# spring.redis.database=0
-# spring.redis.username=default
+# spring.redis.host=localhost
+# spring.redis.port=6379
+spring.redis.host=redis-16364.c284.us-east1-2.gce.cloud.redislabs.com
+spring.redis.port=16364
+spring.redis.database=0
+spring.redis.username=default
