Unable to connect to new Redis Cloud Database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-# spring.session.store-type=redis
-# spring.redis.host=localhost
-# spring.redis.port=6379
-spring.redis.host=redis-11043.c252.ap-southeast-1-1.ec2.cloud.redislabs.com
-spring.redis.port=11043
+spring.redis.host=redis-12066.c284.us-east1-2.gce.cloud.redislabs.com
+spring.redis.port=12066
 spring.redis.database=0
 spring.redis.username=default
