--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.redis.host=redis-12066.c284.us-east1-2.gce.cloud.redislabs.com
 spring.redis.port=12066
 spring.redis.database=0
 spring.redis.username=default
+
+quotes.cache.duration=1
